moved kangaroo.jpg to same dir as src_code

--- a/LAB01/Lab01/Lab01/Lab01.vcxproj
+++ b/LAB01/Lab01/Lab01/Lab01.vcxproj
@@ -150,6 +150,9 @@
   <ItemGroup>
     <ClCompile Include="Lab01.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="kangaroo.jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
