--- a/DiceDetectorMobileApp/app/src/main/AndroidManifest.xml
+++ b/DiceDetectorMobileApp/app/src/main/AndroidManifest.xml
@@ -24,9 +24,8 @@
         android:normalScreens="true"
         android:largeScreens="true"
         android:anyDensity="true"/>
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.front.autofocus" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera2" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera2.CameraCaptureSession" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera2.CameraDevice" android:required="false"/>
 
 </manifest>
