--- a/DiceDetectorMobileApp/app/src/main/AndroidManifest.xml
+++ b/DiceDetectorMobileApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cvi.finalproject.dicedetector">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <supports-screens android:resizeable="true"
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:anyDensity="true"/>
+
+    <uses-feature android:name="android.hardware.camera2"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,15 +28,4 @@
             </intent-filter>
         </activity>
     </application>
-
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <supports-screens android:resizeable="true"
-        android:smallScreens="true"
-        android:normalScreens="true"
-        android:largeScreens="true"
-        android:anyDensity="true"/>
-    <uses-feature android:name="android.hardware.camera2" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera2.CameraCaptureSession" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera2.CameraDevice" android:required="false"/>
-
 </manifest>
